# anonizeme

./: .gitignore  README.md  index.html  package-lock.json  package.json
.cursor/rules/: bump-app-version.mdc
.cursor/skills/bump-app-version/: SKILL.md
.cursor/skills/bump-app-version/scripts/: bump-version.sh
.github/workflows/: release.yml  test.yml
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/anonymizer/: mod.rs  patterns.rs  replacer.rs
src-tauri/tests/: anonymizer_test.rs
