[package]
name = "anon-ize-me"
version = "0.1.3"
description = "Lightweight macOS app to anonymize text and .env files"
authors = ["mpicard"]
edition = "2021"

[lib]
name = "anon_ize_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
